# artifacts/api-server/src/routes/index.ts
@@ -1,10 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import meshyRouter from "./meshy";
+import charactersRouter from "./characters";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use(meshyRouter);
+router.use(charactersRouter);
 
 export default router;
